--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="section-title text-center mb-60">
-						<h2 class="mb-20">About Me</h2>
+						<h2 class="mb-20">Technical Skills</h2>
 						<div class="horizontal-line">
 							<div class="top"></div>
 							<div class="bottom"></div>
@@ -146,10 +146,21 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6">
 					<div class="left mr-40">
-						<h3 class="font-22 capitalize">Howdy!</h3>
+						<h3 class="font-22 capitalize"></h3>
 						<p class="font-16 line-height-28">
-							He loves programming, design, traveling, being outside. He does not love talking about
-							himself in 3rd person.
+							<div>Libraries and Frameworks </div>
+							Jquery, Node, Express, MongoDB,Bootstrap, UiKit, Browserify.
+
+							<div>Languages</div>
+							HTML5, CSS3, Javascript, Bash, AJAX, 
+
+							<div> Tools and Apps  </div>
+							Chrome Dev Tools, NPM, SASS/ LESS, Git/Github, Atom, Sublime Text, Photoshop, Eslint, Gulp,
+							Google Drive, Trello, Linux (Arch), Windows, Mac.
+
+
+
+
 						</p>
 						<div class="about-button mt-30">
 							<a class="btn" href="#">Download my cv</a>
@@ -241,7 +252,8 @@
 						</div>
 						<div class="single-experi">
 							<div class="left-text floatleft">
-								<h4 class="montserrat weight-medium mb-5 capitalize">HTML, CSS, JavaScript, Boostrap, MySQL, React, Node</h4>
+								<h4 class="montserrat weight-medium mb-5 capitalize">HTML, CSS, JavaScript, Boostrap,
+									MySQL, React, Node</h4>
 								<p class="montserrat weight-medium">2019-Present</p>
 							</div>
 							<div class="right-text">
@@ -265,11 +277,14 @@
 							<div class="right-text">
 								<i class="zmdi zmdi-check-circle"></i>
 								<h3 class="capitalize font-20">Photographer Assistant</h3>
-								<p>Responsible for setting up lighting screens and maintaining light readings in outdoor shoots. Maintained all equipment and responsible for transporting equipment to mobile locations and setup. Assisted in arranging large groups for portraits and answering questions from customers. 
+								<p>Responsible for setting up lighting screens and maintaining light readings in outdoor
+									shoots. Maintained all equipment and responsible for transporting equipment to
+									mobile locations and setup. Assisted in arranging large groups for portraits and
+									answering questions from customers.
 								</p>
 							</div>
 						</div>
-						
+
 	</section>
 	<!-- Experience Section End -->
 	<!-- Portfolio Section Start -->
@@ -379,7 +394,8 @@
 										</a>
 									</div>
 									<div class="project-title text-left">
-										<h4 class="font-20 montserrat weight-regular capitalize no-margin">GIFTASTIC</h4>
+										<h4 class="font-20 montserrat weight-regular capitalize no-margin">GIFTASTIC
+										</h4>
 										<p class="montserratlight">HTML, CSS, JavaScript, AJAX</p>
 									</div>
 								</div>
@@ -480,7 +496,7 @@
 
 	<!-- Testimonial Section End -->
 	<!-- Blog Section Start -->
-	
+
 	<!-- Blog Section End -->
 	<!-- Contact Section Start -->
 	<section class="contact-area light-bg section-padding" id="contact">
@@ -559,10 +575,10 @@
 					</div>
 					<div class="right social-link floatright">
 						<ul class="clearfix">
-							<li><a href="http://www.facebook.com" target="_blank">Facebook</a></li>
-							<li><a href="http://www.twitter.com" target="_blank">Twitter</a></li>
-							<li><a href="http://www.linkedin.com" target="_blank">Linkden</a></li>
-							<li><a href="mailto:regaltheme@gmail.com" target="_blank">Email</a></li>
+							<li><a href="https://github.com/holtgal" target="_blank">GitHub</a></li>
+							<li><a href="https://www.linkedin.com/in/holt-galbraith-173b56113/"
+									target="_blank">Linkedin</a></li>
+							<li><a href="mailto:holtgal@me.com" target="_blank">Email</a></li>
 						</ul>
 					</div>
 				</div>
