--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 							</div>
 						</div>
 						<!-- skill bar 2 -->
-						<div class="skill-bar" data-percentage="75%">
+						<div class="skill-bar" data-percentage="90%">
 							<h4 class="progress-title-holder">
 								<span class="progress-title">JavaScript</span>
 								<span class="progress-wrapper">
@@ -318,7 +318,7 @@
 							<div class="single-portfolio overlay light-1 text-center">
 								<img src="assets/img/portfolio/ipadmockup2.png" alt="Mim" />
 								<div class="zoom-icon">
-									<a href="https://holtgal.github.io/Api-Group-Project/" class="fancybox">
+									<a href="https://holtgal.github.io/Api-Group-Project/" target="_blank" class="fancybox">
 										<i class="zmdi zmdi-filter-center-focus"></i>
 									</a>
 								</div>
@@ -334,7 +334,7 @@
 								<img src="assets/img/portfolio/physics.gif" alt="Audio-Visualizer" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
-										<a href="https://holtgal.github.io/Audio-Visualizer/">
+										<a href="https://holtgal.github.io/Audio-Visualizer/" target="_blank">
 											<i class="zmdi zmdi-link"></i>
 										</a>
 									</div>
@@ -346,31 +346,13 @@
 								</div>
 							</div>
 						</div>
-						<div class="grid-item web design web gallery percent-33">
-							<div class="single-portfolio overlay light-1 text-center">
-								<img src="assets/img/portfolio/w2.jpg" alt="Mim" />
-								<div class="title plr-40 text-center">
-									<div class="zoom-icon">
-										<a class="various fancybox" data-fancybox-type="iframe"
-											title="The Butterfly And Flower"
-											href="	https://www.youtube.com/embed/zQ9tVUEI4J4?&autoplay=1">
-											<i class="zmdi zmdi-play"></i>
-										</a>
-									</div>
-									<div class="project-title text-left">
-										<h4 class="font-20 montserrat weight-regular capitalize no-margin">The Butterfly
-											And Flower</h4>
-										<p class="montserratlight">Video</p>
-									</div>
-								</div>
-							</div>
-						</div>
+						
 						<div class="grid-item new web gallery work3d percent-33">
 							<div class="single-portfolio overlay light-1 text-center">
 								<img src="assets/img/portfolio/Screen Shot 2019-06-20 at 10.04.25 PM.png" alt="Mim" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
-										<a href="https://holtgal.github.io/psychic-game/" class="fancybox">
+										<a href="https://holtgal.github.io/psychic-game/" target="_blank" class="fancybox">
 											<i class="zmdi zmdi-filter-center-focus"></i>
 										</a>
 									</div>
@@ -387,7 +369,7 @@
 								<img src="assets/img/portfolio/agif1opt.gif" alt="Mim" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
-										<a href="https://holtgal.github.io/Giftastic-/" class="fancybox">
+										<a href="https://holtgal.github.io/Giftastic-/" target="_blank" class="fancybox">
 											<i class="zmdi zmdi-filter-center-focus"></i>
 										</a>
 									</div>
@@ -401,17 +383,16 @@
 						</div>
 						<div class="grid-item new web gallery percent-33">
 							<div class="single-portfolio overlay light-1 text-center">
-								<img src="assets/img/portfolio/w4.jpg" alt="Mim" />
+								<img src="assets/img/portfolio/nodegif.gif" alt="Mim" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
-										<a href="assets/img/portfolio/w4.jpg" class="fancybox">
+										<a href="https://holtgal.github.io/lirinodeapp/" target="_blank" class="fancybox">
 											<i class="zmdi zmdi-filter-center-focus"></i>
 										</a>
 									</div>
 									<div class="project-title text-left">
-										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Contrary to
-											popular belief</h4>
-										<p class="montserratlight">Branding</p>
+										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Node.js LIRI Application</h4>
+										<p class="montserratlight">Node.JS, JavaScript</p>
 									</div>
 								</div>
 							</div>
@@ -421,7 +402,7 @@
 								<img src="assets/img/portfolio/giphy.gif" alt="train" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
-										<a href="https://holtgal.github.io/Train-Scheduler/">
+										<a href="https://holtgal.github.io/Train-Scheduler/" target="_blank">
 											<i class="zmdi zmdi-link"></i>
 										</a>
 									</div>
