--- a/index.html
+++ b/index.html
@@ -369,14 +369,14 @@
 								<img src="assets/img/portfolio/agif1opt.gif" alt="Mim" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
-										<a href="https://holtgal.github.io/Giftastic-/" target="_blank" class="fancybox">
+										<a href="https://github.com/holtgal/Bamazon/blob/master/README.md" target="_blank" class="fancybox">
 											<i class="zmdi zmdi-filter-center-focus"></i>
 										</a>
 									</div>
 									<div class="project-title text-left">
-										<h4 class="font-20 montserrat weight-regular capitalize no-margin">GIFTASTIC
+										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Bamazon Node Application
 										</h4>
-										<p class="montserratlight">HTML, CSS, JavaScript, AJAX</p>
+										<p class="montserratlight"> MySQL, JavaScript, Node</p>
 									</div>
 								</div>
 							</div>
@@ -410,6 +410,7 @@
 										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Train
 											Scheduler</h4>
 										<p class="montserratlight">FireBase & Moment.js</p>
+										
 									</div>
 								</div>
 							</div>
