edited logo placement and added CV link

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<i class="zmdi zmdi-close-circle-o"></i>
 				</div>
 				<div class="menu-logo">
-					<a href="index.html"><img src="assets/img/dark-logo.png" alt="Mim" /></a>
+					<a href="index.html"><img src="assets/img/portfolio/hglogofinal.png" alt="Mim" /></a>
 				</div>
 				<nav class="mainmenu-box onepage-nev">
 					<ul class="clearfix">
@@ -161,7 +161,7 @@
 
 						</p>
 						<div class="about-button mt-30">
-							<a class="btn" href="#">Download my cv</a>
+							<a class="btn" href="https://drive.google.com/file/d/1eGeMIyG-XnJacoOR0w0WX8IQOpu_Y79P/view?usp=sharing">Download my cv</a>
 						</div>
 					</div>
 				</div>
