--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						<!-- skill bar 1 -->
 						<div class="skill-bar" data-percentage="90%">
 							<h4 class="progress-title-holder">
-								<span class="progress-title">Design</span>
+								<span class="progress-title">Interface Design</span>
 								<span class="progress-wrapper">
 									<span class="progress-mark">
 										<span class="percent"></span>
@@ -184,7 +184,7 @@
 						<!-- skill bar 2 -->
 						<div class="skill-bar" data-percentage="85%">
 							<h4 class="progress-title-holder">
-								<span class="progress-title">html & css</span>
+								<span class="progress-title">HTML, CSS, JavaScript</span>
 								<span class="progress-wrapper">
 									<span class="progress-mark">
 										<span class="percent"></span>
@@ -198,7 +198,7 @@
 						<!-- skill bar 2 -->
 						<div class="skill-bar" data-percentage="90%">
 							<h4 class="progress-title-holder">
-								<span class="progress-title">JavaScript</span>
+								<span class="progress-title">Node.Js, MySQL, React</span>
 								<span class="progress-wrapper">
 									<span class="progress-mark">
 										<span class="percent"></span>
