--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
 					<div class="left mr-40">
 						<h3 class="font-22 capitalize"></h3>
 						<p class="font-16 line-height-28">
-							<div>Libraries and Frameworks </div>
-							Jquery, Node, Express, MongoDB,Bootstrap, UiKit, Browserify.
+							<div><strong> Libraries & Frameworks</strong></div>
+							Jquery, Node, Express, MongoDB, React, Bootstrap, UiKit, Browserify.
 
-							<div>Languages</div>
+							<div><strong>Languages </strong></div>
 							HTML5, CSS3, Javascript, Bash, AJAX, 
 
-							<div> Tools and Apps  </div>
+							<div> <strong> Tools and Apps</strong> </div>
 							Chrome Dev Tools, NPM, SASS/ LESS, Git/Github, Atom, Sublime Text, Photoshop, Eslint, Gulp,
 							Google Drive, Trello, Linux (Arch), Windows, Mac.
 
@@ -329,6 +329,7 @@
 								</div>
 							</div>
 						</div>
+						
 						<div class="grid-item new work3d design gallery work3d percent-33">
 							<div class="single-portfolio overlay light-1 text-center">
 								<img src="assets/img/portfolio/physics.gif" alt="Audio-Visualizer" />
@@ -349,17 +350,17 @@
 						
 						<div class="grid-item new web gallery work3d percent-33">
 							<div class="single-portfolio overlay light-1 text-center">
-								<img src="assets/img/portfolio/Screen Shot 2019-06-20 at 10.04.25 PM.png" alt="Mim" />
+								<img src="assets/img/portfolio/friendfinder.png" alt="Mim" />
 								<div class="title plr-40 text-center">
 									<div class="zoom-icon">
-										<a href="https://holtgal.github.io/psychic-game/" target="_blank" class="fancybox">
+										<a href="https://shielded-retreat-61073.herokuapp.com/" target="_blank" class="fancybox">
 											<i class="zmdi zmdi-filter-center-focus"></i>
 										</a>
 									</div>
 									<div class="project-title text-left">
-										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Hangman Game
+										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Friend Finder
 										</h4>
-										<p class="montserratlight">Javascript</p>
+										<p class="montserratlight">Node, Express</p>
 									</div>
 								</div>
 							</div>
