--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		content="Personal , Personal portfolio template, Personal portfolio, landing page, material design, portfolio, personal">
 	<meta name="author" content="regaltheme.com">
 
-	<title>HG Resposnive Portfolio</title>
+	<title>Holt Galbraith</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
