added logo favicon

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 	<meta name="keywords"
 		content="Personal , Personal portfolio template, Personal portfolio, landing page, material design, portfolio, personal">
 	<meta name="author" content="regaltheme.com">
+	
 
 	<title>Holt Galbraith</title>
 
 	<!-- favicon -->
-	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="assets/img/portfolio/hglogofinal.png">
 
 	<!-- style css -->
 	<link rel="stylesheet" href="style.css">
